# libmate-media-profiles

./: .cvsignore  Makefile.am  NEWS  README  audio-profile-choose.c  audio-profile-choose.h  audio-profile-edit.c  audio-profile-edit.h  audio-profile-private.h  audio-profile.c  audio-profile.h  audio-profiles-edit.c  audio-profiles-edit.h  autogen.sh  configure.ac  git.mk  gmp-conf.h  gmp-util.c  gmp-util.h  gnome-audio-profiles-properties.c  gnome-audio-profiles-test.c  gnome-audio-profiles.glade2  gnome-audio-profiles.schemas.in.in  gnome-media-profiles-3.0.pc.in  gnome-media-profiles.c  gnome-media-profiles.h  gnome-media-profiles.pc.in  libgnome-media-profiles-3.0.pc.in  libgnome-media-profiles.doap  libmate-media-profiles-3.0.pc.in  libmate-media-profiles.doap  libmate-media-profiles.pc.in
data/: Makefile.am  mate-media-profiles.schemas.in.in
glade/: Makefile.am  gnome-media-profiles-catalog.c  gnome-media-profiles-glade.c  gnome-media-profiles.xml  mate-media-profiles-catalog.c  mate-media-profiles.xml
help/: Makefile.am  mate-audio-profiles.omf.in
help/C/: gnome-audio-profiles.xml  legal.xml  mate-audio-profiles.xml
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/ko/: ko.po
help/sl/: sl.po
help/sv/: sv.po
help/zh_CN/: zh_CN.po
libgnome-media-profiles/: Makefile.am  audio-profile.c  audio-profiles-edit.c  audio-profiles-edit.h  gmp-conf.h  gmp-util.h  gnome-audio-profiles-properties.c  gnome-audio-profiles-test.c  gnome-media-profiles.c  gnome-media-profiles.h
libmate-media-profiles/: Makefile.am  audio-profile-choose.c  audio-profile-edit.c  audio-profile-edit.h  audio-profile-private.h  audio-profile.c  audio-profiles-edit.c  audio-profiles-edit.h  gmp-conf.h  mate-audio-profiles-properties.c  mate-audio-profiles-test.c  mate-media-profiles.c  mate-media-profiles.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+47 more)
