SUBDIRS = \
	libgnome-media-profiles	\
	data			\
	po			\
	help

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libgnome-media-profiles-3.0.pc

EXTRA_DIST =                    \
        libgnome-media-profiles-3.0.pc.in

MAINTAINERCLEANFILES =			\
	Makefile.in			\
	aclocal.m4			\
	compile				\
	config.guess			\
	config.h.in			\
	config.sub			\
	configure			\
	depcomp				\
	gnome-doc-utils.make		\
	install-sh			\
	intltool-*.in			\
	libtool				\
	ltmain.sh			\
	missing				\
	mkinstalldirs

-include $(top_srcdir)/git.mk
