SUBDIRS = \
	libmate-media-profiles	\
	data			\
	glade			\
	po			\
	help

pkmateconfigdir = $(libdir)/pkmateconfig
pkmateconfig_DATA = libmate-media-profiles.pc

EXTRA_DIST =                    \
        libmate-media-profiles.pc.in

MAINTAINERCLEANFILES =			\
	Makefile.in			\
	aclocal.m4			\
	compile				\
	config.guess			\
	config.h.in			\
	config.sub			\
	configure			\
	depcomp				\
	mate-doc-utils.make		\
	install-sh			\
	intltool-*.in			\
	libtool				\
	ltmain.sh			\
	missing				\
	mkinstalldirs

-include $(top_srcdir)/git.mk
