include $(top_srcdir)/mate-doc-utils.make
dist-hook: doc-dist-hook
DOC_MODULE = mate-audio-profiles
DOC_INCLUDES = legal.xml
DOC_FIGURES = \
	figures/mate-audio-profiles-profiles-window.png \
	figures/mate-audio-profiles-profile-window.png
DOC_LINGUAS = da de el es fr ko sl sv zh_CN

MAINTAINERCLEANFILES =			\
	Makefile.in			\
	*/*.mo

-include $(top_srcdir)/git.mk
